# XQuartz

./: .gitignore  .gitmodules  CONTRIBUTING.md  COPYING  LICENSE  README.md  XQuartz-entitlements.plist  clean.sh  compile.sh  install-or-update-macports.sh
.github/: FUNDING.yml
.github/workflows/: build.yml
docs/bugs-history/: DISPLAYS_ISSUE.md
pkg/: .gitignore  INTRODUCTION.txt  README.txt  XQuartzComponent.plist  XQuartzDistribution.plist  XQuartzRequirements.plist
pkg/plugin-src/: InstallerSections.plist
pkg/resources/: LICENSE.txt  README.txt
pkg/scripts/: postinst.sh  postinstall  preinst.sh  preinstall
src/: cairo.confopt  epoll-shim.confopt  fontconfig.confopt  freeglut.confopt  freetype2.confopt  llvm-project.confopt  pixman.confopt  xkeyboard-config.confopt  xterm.confopt
src/Sparkle.patches/: 0001-Add-bsdiff-and-ed25519-as-dependencies-of-Sparkle.patch  0001-SKIP_INSTALL-NO-for-framework.patch  0002-Merge-pull-request-1771-from-sparkle-project-fix-176.patch  0002-SKIP_INSTALL-NO-for-framework.patch
src/cairo.patches/: 0001-meson-Fix-darwin-dylib-compat-and-current-versions-t.patch  0001-meson-Fix-detection-of-expat-on-darwin.patch  nofailpthread.patch
src/epoll-shim.patches/: define_itimerspec.patch
src/fontconfig.patches/: config_paths.patch  no_weak.patch  xlocale.h.patch
src/freeglut.patches/: 0001-XPutBackEvent-copies-an-XEvent-internally-so-the-poi.patch  no-clock_gettime.patch  no-progs.patch  x-path.patch
src/freetype2.patches/: 0001-Don-t-use-ansi.patch  (+7 more)
src/xorg/lib/libXt7-stub/: .gitignore  Makefile.am  configure.ac  stub.c
(+94 files in other folders)
